Thu Jan 25 19:36:45 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES TODO README INSTALL: updated
	* libxslt/xslt.h: added URL and version/vendor :-)
	* libxslt/transform.c: fixed a problem in xsl:attribute, removed
	  attempt to support older libxml2 version.
	* libxslt/variables.h libxslt/xsltInternals.h: update to structures
	  and macros to add/register new document created by document()
	* libxslt/functions.c: implemented current(), unparsed-entity-uri()
	  system-property(), element-available() and function-available().
	  A crippled version of document() has been added too.

Thu Jan 25 12:13:04 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* functions.[ch]: Bjorn Reese <breese@mail1.stofanet.dk> provided
	  number formatting !!!
	* acconfig.h config.h.in configure.in libxslt/Makefile.am
	  tests/Makefile.am; added testing for mathematical functions,
	  fixed make test(s)
	* FEATURES: updated

Wed Jan 24 16:59:05 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltInternals.h libxslt/pattern.c: fixed problems
	  with non-named rules (*, ...) added accelerators
	* libxslt/templates.[ch]: added xsltEvalTemplateString()
	  and xsltEvalAttrValueTemplate() high level functions
	* libxslt/transform.c: fixed the part where attributes
	  had to be looked at as templates, added comment and
	  PI generation
	* TODO FEATURES: updated to reflect the new state

Wed Jan 24 05:33:54 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/functions.[ch] Makefile.am: added new module functions
	  with templates for the XSLT functions.
	* libxslt/variables.h templates.c: added registrations of new
	  functions when an XPath context is created

Tue Jan 23 17:24:26 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/Makefile.am: cleanup
	* libxslt/pattern.c: should support most of the patterns now
	  except ID/Key and maybe some namespace checks when having
	  a default namespace
	* TODO: updated
