@@ -1,3 +1,7 @@
+Fri Jan 26 21:48:25 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
+
+	* libxslt/functions.c: xsltGenerateIdFunction() small patch
+
 Thu Jan 25 19:36:45 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
 
 	* FEATURES TODO README INSTALL: updated
